@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4TrackVector.hh,v 1.5 1999-12-15 14:53:57 gunter Exp $
+// $Id: G4TrackVector.hh,v 1.6 2000-11-11 06:34:10 tsasaki Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -13,7 +13,7 @@
 //
 //  G4TrackVector.hh
 //
-//  Description:
+//  class description:
 //    This class keeps a List of G4Track objects. It is implemented 
 //    as a RougeWave pointer ordered vector.
 //
