@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4UserSteppingAction.hh,v 1.5 1999-12-15 14:53:57 gunter Exp $
+// $Id: G4UserSteppingAction.hh,v 1.6 2000-11-11 06:34:10 tsasaki Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -13,7 +13,7 @@
 //
 //  G4UserSteppingAction.hh
 //
-//  Description:
+// class description:
 //    This class represents actions taken place by the user at each
 //    end of stepping. 
 //
@@ -36,7 +36,7 @@ class G4UserSteppingAction
 {
 
 //--------
-   public:
+public: // with description
 //--------
 
 // Constructor and destructors
