@@ -5,9 +5,12 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VTrajectoryPoint.hh,v 1.3 1999-12-15 14:53:57 gunter Exp $
+// $Id: G4VTrajectoryPoint.hh,v 1.4 2000-11-11 06:34:11 tsasaki Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
+
+// class description
+//  The base class for the trajectory class
 
 #ifndef G4VTrajectoryPoint_h
 #define G4VTrajectoryPoint_h 1
