@@ -1,4 +1,4 @@
-$Id: History,v 1.12 2000-06-02 10:23:31 kurasige Exp $
+$Id: History,v 1.13 2000-11-11 06:33:56 tsasaki Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,7 +16,12 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
-
+Nov 04,00 T.Sasaki (tracking-V02-00-02)
+- G4TrackingManager.icc has been modified for new biasing schme
+- Descriptions are added too header files
+- 
+Aug 30,00 T.Sasaki (tracking-V02-00-01)
+- Protection for no AtRestDoIt procs. 
 June 2, 00 M.Asai (tracking-01-01-01)
 - Add SetUserTrackInformation(G4VUserTrackInformation*) to
  G4TrackingManager
